--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "doctrine/dbal": "^2.6",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
+        "laravolt/avatar": "^2.0",
         "predis/predis": "^1.1",
         "tymon/jwt-auth": "^0.5.12"
     },
