--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.0.0-beta",
     "core-js": "^2.4.1",
-    "jquery": "^3.2.1",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
     "ng2-toastr": "^4.1.2",
+    "popper.js": "^1.14.1",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
