--- a/package.json
+++ b/package.json
@@ -25,10 +25,21 @@
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.0.0-beta",
     "core-js": "^2.4.1",
+    "embed-js": "^5.0.3",
+    "embed-plugin-emoji": "^5.0.3",
+    "embed-plugin-facebook": "^5.0.3",
+    "embed-plugin-github": "^5.0.3",
+    "embed-plugin-instagram": "^5.0.3",
+    "embed-plugin-map": "^5.0.3",
+    "embed-plugin-twitter": "^5.0.3",
+    "embed-plugin-url": "^5.0.3",
+    "embed-plugin-youtube": "^5.0.3",
+    "embed-preset-basic": "^5.0.3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "ng2-toastr": "^4.1.2",
     "popper.js": "^1.14.1",
+    "prismjs": "^1.12.2",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
