--- a/public/.htaccess
+++ b/public/.htaccess
@@ -15,6 +15,7 @@
     RewriteRule ^ index.php [L]
 
     # Handle Authorization Header
+    SetEnvIf Authorization .+ HTTP_AUTHORIZATION=$0
     RewriteCond %{HTTP:Authorization} .
     RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
 </IfModule>
