--- a/package.json
+++ b/package.json
@@ -4,26 +4,26 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "serve": "ng build --watch",
-    "build": "ng build",
+    "start": "ng serve --source-map",
+    "serve": "ng build --watch --source-map",
+    "build": "ng build --source-map",
+    "build-prod": "ng build --prod --source-map",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.2.4",
-    "@angular/common": "^4.2.4",
-    "@angular/compiler": "^4.2.4",
-    "@angular/core": "^4.2.4",
-    "@angular/forms": "^4.2.4",
-    "@angular/http": "^4.2.4",
-    "@angular/platform-browser": "^4.2.4",
-    "@angular/platform-browser-dynamic": "^4.2.4",
-    "@angular/router": "^4.2.4",
+    "@angular/animations": "^6.1.10",
+    "@angular/common": "^6.1.10",
+    "@angular/compiler": "^6.1.10",
+    "@angular/core": "^6.1.10",
+    "@angular/forms": "^6.1.10",
+    "@angular/http": "^6.1.10",
+    "@angular/platform-browser": "^6.1.10",
+    "@angular/platform-browser-dynamic": "^6.1.10",
+    "@angular/router": "^6.1.10",
     "angular-font-awesome": "^3.1.2",
-    "angular2-autosize": "^1.0.2",
     "bootstrap": "^4.4.1",
     "core-js": "^2.6.11",
     "embed-js": "^5.0.4",
@@ -38,23 +38,25 @@
     "embed-preset-basic": "^5.0.4",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
-    "ng2-toastr": "^4.1.2",
     "ngx-image-cropper": "^1.0.1",
+    "ngx-toastr": "^10.1.0",
     "popper.js": "^1.16.1",
     "prismjs": "^1.20.0",
-    "rxjs": "^5.4.2",
+    "rxjs": "^6.5.5",
+    "rxjs-compat": "^6.0.0-rc.0",
     "simple-scrollbar": "^0.4.0",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.3.0",
-    "@angular/compiler-cli": "^4.2.4",
-    "@angular/language-service": "^4.2.4",
+    "@angular-devkit/build-angular": "~0.8.0",
+    "@angular/cli": "^6.2.9",
+    "@angular/compiler-cli": "^6.1.10",
+    "@angular/language-service": "^6.1.10",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "^2.0.8",
     "@types/jquery": "^3.3.34",
     "@types/node": "~6.0.60",
-    "codelyzer": "~3.1.1",
+    "codelyzer": "~4.2.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
@@ -68,6 +70,6 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.3.2",
-    "typescript": "~2.3.3"
+    "typescript": "~2.9.2"
   }
 }
